# treeline_rs

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-end-to-end-spine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-SKELETON.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-builder-serialization/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-CONTEXT.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/treelite-builder/: Cargo.toml
crates/treelite-core/: Cargo.toml
crates/treelite-core/src/: enums.rs  error.rs  lib.rs  model.rs  tree.rs  tree_buf.rs
crates/treelite-core/src/serialize/: binary.rs  error.rs  fields.rs  json.rs  mod.rs  pybuffer.rs
crates/treelite-core/tests/: dump_json.rs  enums.rs  fields.rs  model_invariants.rs  serialize_pybuffer.rs  serialize_roundtrip.rs  tree_buf.rs  tree_model.rs
crates/treelite-cubecl/: Cargo.toml
crates/treelite-cubecl/src/: device.rs  error.rs  kernels.rs  lib.rs  upload.rs
crates/treelite-cubecl/src/kernels/: default_raw.rs  leaf_id.rs  mod.rs  postproc.rs  score_per_tree.rs  traversal.rs
crates/treelite-cubecl/tests/: determinism.rs  device_absent.rs  malformed.rs  postproc.rs  predict_kinds.rs  spike.rs  upload.rs
crates/treelite-gtil/: Cargo.toml
crates/treelite-harness/: Cargo.toml
crates/treelite-harness/src/: lib.rs  manifest.rs  memory.rs  report.rs
crates/treelite-harness/tests/: equivalence.rs  golden_v5.rs  gpu_crossover.rs  gtil_matrix.rs  gtil_matrix_cubecl.rs  gtil_matrix_gpu.rs  lightgbm.rs  run_equivalence.rs  sklearn.rs  three_format_equivalence.rs
crates/treelite-lightgbm/: Cargo.toml
crates/treelite-lightgbm/src/: bitset.rs  error.rs  lib.rs  objective.rs  parse.rs
crates/treelite-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/treelite-py/python/treelite_rs/: __init__.py  _paths.py  frontend.py  frontend.pyi  model.pyi
crates/treelite-py/python/treelite_rs/gtil/: __init__.py  __init__.pyi
crates/treelite-py/python/treelite_rs/sklearn/: __init__.py  __init__.pyi
crates/treelite-py/src/: error.rs  frontend.rs  gtil.rs  lib.rs  model.rs  sklearn.rs
crates/treelite-py/tests/python/: conftest.py  test_backend.py  test_errors.py  test_frontend.py  test_nthread.py  test_predict_ab.py  test_serialize.py  test_sklearn_ab.py  test_zero_copy.py
crates/treelite-sklearn/: Cargo.toml
crates/treelite-sklearn/src/: bulk.rs  error.rs  histgb.rs  lib.rs  mixin.rs
crates/treelite-xgboost/: Cargo.toml
crates/treelite-xgboost/src/: detect.rs  error.rs  json.rs  legacy.rs  lib.rs  objective.rs  ubjson.rs
crates/treelite-xgboost/tests/: detect.rs  error.rs  json.rs  legacy.rs  load_fixture.rs  nan_inf.rs  ubjson.rs
docs/: GPU_CROSSOVER.md  GPU_EQUIVALENCE_REPORT.md  MEMORY_REPORT.md  gpu_equivalence.json
fixtures/: binary_logistic.model.json  capture_golden.py  capture_golden_v5.py  capture_gtil_matrix.py  capture_gtil_models.py  capture_lightgbm.py  capture_sklearn.py  generate_xgb_3format.py  golden.json  golden_v5.manifest.json  lightgbm_categorical.golden.json  lightgbm_categorical.txt  lightgbm_numerical.golden.json  sklearn_gb.golden.json  sklearn_histgb_categorical.golden.json  sklearn_histgb_numerical.golden.json  sklearn_iforest.golden.json  sklearn_rf.golden.json  xgb_3format.golden.json  xgb_3format.json  xgb_3format.manifest.json  xgb_3format.model  xgb_3format.ubj
fixtures/gtil/: binary.f32.f32.default.dense.s1234.golden.json  binary.f32.f32.default.dense.s5678.golden.json  binary.f32.f32.default.sparse.s1234.golden.json  binary.f32.f32.default.sparse.s5678.golden.json  binary.f32.f32.leaf_id.dense.s1234.golden.json  binary.f32.f32.leaf_id.dense.s5678.golden.json  binary.f32.f32.leaf_id.sparse.s1234.golden.json  binary.f32.f32.leaf_id.sparse.s5678.golden.json  binary.f32.f32.raw.dense.s1234.golden.json  binary.f32.f32.raw.dense.s5678.golden.json  binary.f32.f32.raw.sparse.s1234.golden.json  binary.f32.f32.raw.sparse.s5678.golden.json  binary.f32.f32.score_per_tree.dense.s1234.golden.json  binary.f32.f32.score_per_tree.dense.s5678.golden.json  binary.f32.f32.score_per_tree.sparse.s1234.golden.json  binary.f32.f32.score_per_tree.sparse.s5678.golden.json  binary.f32.f64.default.dense.s1234.golden.json  binary.f32.f64.default.dense.s5678.golden.json  binary.f32.f64.default.sparse.s1234.golden.json  binary.f32.f64.default.sparse.s5678.golden.json  binary.f32.f64.leaf_id.dense.s1234.golden.json  binary.f32.f64.leaf_id.dense.s5678.golden.json  binary.f32.f64.leaf_id.sparse.s1234.golden.json  binary.f32.f64.leaf_id.sparse.s5678.golden.json  binary.f32.f64.raw.dense.s1234.golden.json  binary.f32.f64.raw.dense.s5678.golden.json  binary.f32.f64.raw.sparse.s1234.golden.json  binary.f32.f64.raw.sparse.s5678.golden.json  binary.f32.f64.score_per_tree.dense.s1234.golden.json  binary.f32.f64.score_per_tree.dense.s5678.golden.json  binary.f32.f64.score_per_tree.sparse.s1234.golden.json  binary.f32.f64.score_per_tree.sparse.s5678.golden.json  large_margin.f32.f32.default.dense.s1234.golden.json  large_margin.f32.f32.default.dense.s5678.golden.json  large_margin.f32.f32.default.sparse.s1234.golden.json  large_margin.f32.f32.default.sparse.s5678.golden.json  large_margin.f32.f32.leaf_id.dense.s1234.golden.json  large_margin.f32.f32.leaf_id.dense.s5678.golden.json  large_margin.f32.f32.leaf_id.sparse.s1234.golden.json  large_margin.f32.f32.leaf_id.sparse.s5678.golden.json  (+120 more)
(+172 files in other folders)
