[package]
name = "treelite-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

# GPU backends (D-04, explicit-selection only): default = cpu-only. Each feature
# forwards to the matching Plan-01 `treelite-cubecl` feature so e.g.
# `cargo test -p treelite-harness --features rocm` pulls the HIP runtime, while
# the default harness build / `cargo test --workspace` stay cpu-only and need no
# GPU system libs. The `*_case()` constructors are `#[cfg(feature = …)]`-gated.
[features]
default = []
rocm = ["treelite-cubecl/rocm"]
cuda = ["treelite-cubecl/cuda"]
wgpu = ["treelite-cubecl/wgpu"]

[dependencies]
treelite-core = { path = "../treelite-core" }
treelite-xgboost = { path = "../treelite-xgboost" }
treelite-gtil = { path = "../treelite-gtil" }
# treelite-cubecl backs cubecl_cpu_case() (D-11 registration): the dense f32/f64
# RunnerCase slots call treelite_cubecl::predict_cpu. It is a regular dependency
# (NOT a dev-dep) because cubecl_cpu_case() is a `pub fn` in src/lib.rs — it must
# resolve at library-build time, exactly like treelite-gtil/treelite-xgboost.
treelite-cubecl = { path = "../treelite-cubecl" }
anyhow = { workspace = true }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# treelite-lightgbm drives the LightGBM 1e-5 golden in tests/lightgbm.rs.
treelite-lightgbm = { path = "../treelite-lightgbm" }
# treelite-sklearn drives the RF/ET + GB 1e-5 goldens in tests/sklearn.rs.
treelite-sklearn = { path = "../treelite-sklearn" }
