[package]
name = "treelite-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

# GPU backends (D-04, explicit-selection only): default = cpu-only. Each feature
# forwards to the matching Plan-01 `treelite-cubecl` feature so e.g.
# `cargo test -p treelite-harness --features rocm` pulls the HIP runtime, while
# the default harness build / `cargo test --workspace` stay cpu-only and need no
# GPU system libs. The `*_case()` constructors are `#[cfg(feature = …)]`-gated.
[features]
default = []
# Each GPU feature forwards to the matching Plan-01 treelite-cubecl feature AND
# pulls in the (otherwise-optional) `cubecl` umbrella crate so the `*_case()`
# constructors can name the runtime type directly (`cubecl::hip::HipRuntime`
# etc.) — `treelite-cubecl/<backend>` enables that backend's runtime symbols
# inside cubecl; `dep:cubecl` brings the crate name into the harness's scope.
rocm = ["dep:cubecl", "cubecl/rocm", "treelite-cubecl/rocm"]
cuda = ["dep:cubecl", "cubecl/cuda", "treelite-cubecl/cuda"]
wgpu = ["dep:cubecl", "cubecl/wgpu", "treelite-cubecl/wgpu"]

# MEM-03 allocator selection for the `memory_report` bin (D-07/D-08). Both
# NON-DEFAULT and mutually exclusive (the bin's `compile_error!` guards the
# both-on case). Mirrors the GPU optional-dep + non-default-feature shape one
# tier stricter: the `#[global_allocator]` static lives ONLY in the bin target,
# so these features (and the allocator crates) never reach any library crate or
# the abi3 wheel (treelite-py). `dep:` prefixes keep the deps purely opt-in.
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
mimalloc = ["dep:mimalloc"]

[dependencies]
treelite-core = { path = "../treelite-core" }
treelite-xgboost = { path = "../treelite-xgboost" }
treelite-gtil = { path = "../treelite-gtil" }
# treelite-cubecl backs cubecl_cpu_case() (D-11 registration): the dense f32/f64
# RunnerCase slots call treelite_cubecl::predict_cpu. It is a regular dependency
# (NOT a dev-dep) because cubecl_cpu_case() is a `pub fn` in src/lib.rs — it must
# resolve at library-build time, exactly like treelite-gtil/treelite-xgboost.
treelite-cubecl = { path = "../treelite-cubecl" }
# `cubecl` is OPTIONAL and only enabled by the rocm/cuda/wgpu features — the
# `*_case()` constructors name `cubecl::{hip,cuda,wgpu}::*Runtime` directly. The
# default cpu-only harness build does NOT pull cubecl in (no GPU system libs).
cubecl = { workspace = true, optional = true }
# MEM-03 allocator crates — OPTIONAL, enabled only by the jemalloc/mimalloc
# features above, and referenced ONLY by src/bin/memory_report.rs. They are
# confined to the harness (D-08) and must never appear in treelite-py's graph.
tikv-jemallocator = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }
anyhow = { workspace = true }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# treelite-lightgbm drives the LightGBM 1e-5 golden in tests/lightgbm.rs.
treelite-lightgbm = { path = "../treelite-lightgbm" }
# treelite-sklearn drives the RF/ET + GB 1e-5 goldens in tests/sklearn.rs.
treelite-sklearn = { path = "../treelite-sklearn" }
