[package]
name = "treelite-lightgbm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
treelite-core = { path = "../treelite-core" }
treelite-builder = { path = "../treelite-builder" }
thiserror = { workspace = true }

[dev-dependencies]
# treelite-gtil + approx drive the in-crate parse/objective/node-id tests.
# NOTE: treelite-harness is deliberately NOT a dev-dependency here — it depends
# on treelite-lightgbm (tests/lightgbm.rs), so adding it would create a cycle.
# The crate-level tests load the vendored model.txt locally instead.
treelite-gtil = { path = "../treelite-gtil" }
approx = { workspace = true }
